[workspace]
members = ["crates/*", "contracts/cosmwasm/*", "mantis/node"]
resolver = "2"


[workspace.dependencies]
derive_more = { version = "0.99.17", default-features = false, features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_into",
    "unwrap",
] }
hex = { version = "^0.4.3", default-features = false }
num = { version = "^0.4.1", default-features = false }

prost-build = { version = "^0.12.1" }

cosmwasm-std = { version = "^1.5.0", features = [
    "iterator",
], default-features = false }
cw-controllers = { version = "^1.1.1", default-features = false }
sylvia = { version = "^0.9.0", default-features = false }
schemars = { version = "^0.8.16", default-features = false }
cosmwasm-schema = { version = "^1.5.0", default-features = false }
serde = { version = "^1.0.192", default-features = false }
cw-storage-plus = { version = "^1.2.0", features = [
    "iterator",
], default-features = false }
itertools = { version = "^0.12.0", default-features = false }
num-rational = { version = "^0.4.1", default-features = false }
num-integer = { version = "^0.1.45", default-features = false }

serde-json-wasm = { version = "^1.0.0", default-features = false }

clap = { version = "^4.4.8", features = ["derive"] }
cosmrs = { version = "^0.15.0", features = ["cosmwasm", "rpc", "grpc", "bip32", "dev"] }
tokio = { version = "^1.34.0", features = ["full"] }
cosmos-sdk-proto = { version = "^0.20.0", features = ["grpc-transport"] }
tonic = { version = "^0.10.2" }
rand = { version = "^0.8.5", default-features = false }
rust_decimal = "^1.33"
rust_decimal_macros = "^1.33"
rand_distr = "^0.4.3"
strum = "^0.25"
strum_macros = "^0.25"
tuples = { version = "^1.12.0" }


bip32 = { version = "^0.5.1", default-features = false, features = ["alloc", "secp256k1", "mnemonic", "bip39"] }