[workspace]
members = ["crates/*", "contracts/cosmwasm/*", "mantis/node"]
resolver = "2"


[workspace.lints.rust]
unsafe = "deny"
unused_imports = "warn"
unused_must_use = "warn"
bad_style = "warn"
trivial_casts = "warn"

[workspace.lints.clippy]
todo = "warn"
let_unit_value = "allow"

[workspace.dependencies]
derive_more = { version = "0.99.17", default-features = false, features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_into",
    "unwrap",
] }
hex = { version = "^0.4.3", default-features = false }
num = { version = "^0.4.1", default-features = false }
enumn = { version = "0.1.12" }
prost-build = { version = "^0.12.2" }
bech32 = { version = "^0.9.1", default-features = false }
cosmwasm-std = { version = "^1.5.0", features = [
    "iterator",
], default-features = false }

parity-scale-codec = { version = "^3.6.5", default-features = false }
cw20 = { version = "^1.1.2", default-features = false }
cw-controllers = { version = "^1.1.1", default-features = false }
sylvia = { version = "^0.9.1", default-features = false }
schemars = { version = "^0.8.16", default-features = false }
cosmwasm-schema = { version = "^1.5.0", default-features = false }
serde = { version = "^1.0.192", default-features = false }
cw-storage-plus = { version = "^1.2.0", features = [
    "iterator",
], default-features = false }
itertools = { version = "^0.12.0", default-features = false }
num-rational = { version = "^0.4.1", default-features = false }
num-integer = { version = "^0.1.45", default-features = false }

ibc-proto = { version = "^0.39.1", default-features = false }
serde-json-wasm = { version = "^1.0.0", default-features = false }

clap = { version = "^4.4.8", features = ["derive"] }
cosmrs = { version = "^0.15.0", features = [
    "cosmwasm",
    "rpc",
    "grpc",
    "bip32",
    "dev",
] }
tokio = { version = "^1.34.0", features = ["full"] }
cosmos-sdk-proto = { version = "^0.20.0", features = ["grpc-transport"] }
tonic = { version = "^0.10.2" }
rand = { version = "^0.8.5", default-features = false }
rust_decimal = "^1.33"
rust_decimal_macros = "^1.33"
rand_distr = "^0.4.3"
strum = "^0.25"
strum_macros = "^0.25"
tuples = { version = "^1.14.0" }
serde-cw-value = { git = "https://github.com/dzmitry-lahoda-forks/serde-cw-value.git", branch = "dz/3", default-features = false }

no-panic = "^0.1"
scale-info = { version = "^2.10.0", default-features = false }
prost = { version = "^0.12.3", default-features = false }
bip32 = { version = "^0.5.1", default-features = false, features = [
    "alloc",
    "secp256k1",
    "mnemonic",
    "bip39",
] }
prost-types = { version = "^0.12.3", default-features = false }
sha2 = { version = "^0.10.8", default-features = false }
num-traits = { version = "^0.2.17", default-features = false }
thiserror = { version = "^1.0.50", default-features = false, package = "thiserror-core" }
xcm = { version = "^5.0.0", default-features = false, package = "staging-xcm" }
cw-utils = { version = "^1.0.3", default-features = false }
cw2 = { version = "^1.1.2", default-features = false }
ibc-apps-more = { git = "https://github.com/ComposableFi/ibc-apps-more-rs.git", branch = "main", default-features = false }
ibc-apps = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
ibc-core = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
ibc-primitives = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
primitive-types = { git = "https://github.com/dzmitry-lahoda-forks/parity-common.git", branch = "dz/3", default-features = false, features = [
    "serde_no_std",
] }
neutron-sdk = { version = "^0.7.0", default-features = false }

osmosis-std = { version = "^0.20.1", default-features = false }

astroport-router = { version = "^1.2.0", default-features = false }
