[workspace]
members = [
    "crates/*",
    "contracts/cosmwasm/*",
    "mantis/node",
    "mantis/blackbox_rs",
]
exclude = ["contracts/cosmwasm/node_modules/", "contracts/cosmwasm/dist"]
resolver = "2"
package.version = "0.4.0"

[workspace.lints.rust]
unsafe = "deny"
unused_imports = "warn"
unused_must_use = "warn"
bad_style = "warn"
trivial_casts = "warn"

[workspace.lints.clippy]
todo = "warn"
let_unit_value = "allow"

[workspace.dependencies]

cvm = { path = "./crates/cvm", default-features = false }
blackbox_rs = { path = "./node/blackbox_rs", default-features = false }
cvm-route = { path = "./crates/cvm-route", default-features = false }
mantis-cw = { path = "./crates/mantis-cw", default-features = false }
cvm-runtime = { path = "./crates/cvm-runtime", default-features = false }
cvm-runtime-exchange = { path = "./crates/cvm-runtime-exchange", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_into",
    "unwrap",
] }
log = { version = "0.4.21", default_features = false, features = [
    "std",
    "serde",
    "kv_std",
    "kv_sval",
    "kv_serde",
] }
env_logger = { version = "0.11.3", default-features = false, features = [
    "default",
    "color",
    "auto-color",
    "humantime",
    "regex",
    "unstable-kv",
] }
hex = { version = "^0.4.3", default-features = false }
enumn = { version = "0.1.13", default-features = false }
prost-build = { version = "^0.12.2" }
bech32 = { version = "^0.9.0", default-features = false }
cosmwasm-std = { version = "1.5.0", features = [
    "iterator",
], default-features = false }

parity-scale-codec = { version = "3.6.5", default-features = false }
cw20 = { version = "^1.1.2", default-features = false }
cw-controllers = { version = "^1.1.1", default-features = false }
sylvia = { version = "^0.9.1", default-features = false }
schemars = { version = "^0.8.16", default-features = false }
cosmwasm-schema = { version = "1.5.0", default-features = false }
serde = { version = "1.0.192", default-features = false }
cw-storage-plus = { version = "^1.2.0", features = [
    "iterator",
], default-features = false }
itertools = { version = "0.12.0", default-features = false }
cw-multi-test  = {version = "^1.0.0", default-features = false}

num-integer = { version = "0.1.45", default-features = false }
num-rational = {git = "https://github.com/dzmitry-lahoda-forks/num-rational.git", rev = "b7350e2f4c64f8f7a468d5321e95f8f523867c66", default-features = false}
num-traits = { version = "^0.2.18", default-features = false }


ibc-proto = { version = "0.39.1", default-features = false }
serde-json-wasm = { version = "1.0.0", default-features = false }

clap = { version = "^4.5.4", features = ["derive"], default-features = false}
cosmrs = { version = "^0.16.0", features = [
    "cosmwasm",
    "rpc",
    "grpc",
    "bip32",
    "dev",
], default-features = false }

tokio = { version = "^1.37.0", features = ["full"] }
cosmos-sdk-proto = { version = "^0.21.1",  default-features = false}
tonic = { version = "^0.11.0" }
rand = { version = "^0.8.5", default-features = false }
rust_decimal = {version =  "1.33", default-features = false}
rust_decimal_macros = {version = "1.33", default-features = false}
rand_distr = "^0.4.3"
strum = {version =  "^0.25", default-features = false, features = ["derive"]}
strum_macros = "^0.25"
tuples = { version = "^1.14.0" }
serde-cw-value = { git = "https://github.com/dzmitry-lahoda-forks/serde-cw-value.git", branch = "dz/3", default-features = false }
petgraph = {version = "*", default-features = false , features = ["graphmap", "stable_graph", "matrix_graph", "serde-1", 
]}

no-panic = "^0.1"
scale-info = { version = "^2.10.0", default-features = false }
prost = { version = "^0.12.3", default-features = false }
bip32 = { version = "^0.5.1", default-features = false, features = [
    "alloc",
    "secp256k1",
    "mnemonic",
    "bip39",
] }
prost-types = { version = "^0.12.3", default-features = false }
sha2 = { version = "^0.10.8", default-features = false }

thiserror = { version = "^1.0.50", default-features = false, package = "thiserror-core" }
# no XCM until it has decent support for cosmwasm and wasm32 std https://github.com/paritytech/polkadot-sdk/pull/1454
# xcm = { version = "^5.0.0", default-features = false, package = "staging-xcm" }
cw-utils = { version = "^1.0.3", default-features = false }
cw2 = { version = "^1.1.2", default-features = false }

# upgrade leads to float issue, fix it via  https://medium.com/cosmwasm/debugging-floating-point-generation-in-rust-wasm-smart-contract-f47d833b5fba
ibc-apps-more = { git = "https://github.com/ComposableFi/ibc-apps-more-rs.git", rev = "2e665779e1abe316e263633b5470104807605b17", default-features = false }
ibc-app-transfer-types = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
ibc-core-host-types = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
ibc-primitives = { git = "https://github.com/dzmitry-lahoda-forks/ibc-rs.git", branch = "dz/14", default-features = false, features = [
    "serde",
] }
primitive-types = { git = "https://github.com/dzmitry-lahoda-forks/parity-common.git", branch = "dz/3", default-features = false, features = [
    "serde_no_std",
] }
neutron-sdk = { version = "^0.10.0", default-features = false }

osmosis-std = { version = "^0.22.0", default-features = false }

astroport = { version = "^3.6.1", default-features = false }

ndarray = { version = "^0.15.6", default-features = false }

good_lp = { version = "^1.7", default-features = false }

cw-mantis-order = { path = "./contracts/cosmwasm/order", features = [
    "json-schema",
    "std",
] }

fraction = { version = "0.15.1", default-features = false }

cw-orch = { version = "0.21.2", default-features = false}

[profile.deployment]
inherits = "release"
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3            # 3 gave bigger size of binary
debug = false
debug-assertions = false
# panic = "abort"
