[tool.poetry]
name = "mantis"
version = "0.0.1"
description = "Python server which solves problems from provided input and additional data obtained from chains/indexers and outputs single route solution."
authors = []
packages = [
    { include = "simulation" },
    { include = "blackbox" },
    { include = "cvm_runtime", from = "blackbox" },
    { include = "main.py", from = "blackbox" },
]

[tool.poetry.dependencies]
python = "3.11.6"

#fastapi-cache2 = "^0.2.1"  # no needed now, too many things
bech32 = "*"
cvxpy = { version = "1.3.2", extras = [] }
ecdsa = "*"
fastapi = { extras = ["all"], version = "^0.108.0" }
googleapis-common-protos = "*"
grpcio = "==1.51.1"
jsonschema = ">=3.2.0,<5"
maturin = "1.4.0"
numpy = "1.23.4"
pandas = { extras = [], version = "^2.1.4" }
pendulum = "2.1.2"
protobuf = "4.25.1"
pycryptodome = "^3.18.0"
pydantic = "^2.5.3"
pydantic_settings = "*"
python-dateutil = "*"
requests = "*"
rpds-py = "0.13.2"
scipy = "1.9.3"
strictly-typed-pandas = "^0.1.24"
uvicorn = "^0.25.0"
cosmpy = { version = "0.9.1" }
google = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blackbox = 'blackbox.main:start'
