[tool.poetry]
name = "mantis"
version = "0.0.2"
description = "Python server which solves problems from provided input and additional data obtained from chains/indexers and outputs single route solution."
authors = []
packages = [
    { include = "simulation" },
    { include = "blackbox" },
    { include = "cvm_runtime", from = "blackbox" },
    { include = "main.py", from = "blackbox" },
]

[tool.poetry.dependencies]
python = ">=3.11.6, <=3.11.7"

#fastapi-cache2 = "^0.2.1"  # no needed now, too many things
bech32 = "1.2.0"
cosmpy = { version = "0.9.1" }

#GLOP, PDLP require ortools which i fail to install

cvxpy = { version = "1.3.2", extras = [
    "MOSEK",
    "CBC",
    "CVXOPT",
    "GUROBI",
    "SCIP",
    "CLARABEL",
    "GLPK",
    "XPRESS",
] }
ecdsa = "0.18.0"
fastapi = { extras = ["all"], version = "0.108.0" }
google-cloud = "0.34.0"
googleapis-common-protos = "1.61.0"
grpcio = "==1.51.1"
jsonschema = "4.20.0"
maturin = "1.4.0"
numpy = "1.23.4"
pandas = { extras = [], version = "^2.1.4" }
pendulum = "==2.0.3" # Mac M1 support https://github.com/sdispater/pendulum/issues/454#issuecomment-1847991459
protobuf = "4.25.1"
pycryptodome = "3.19.1"
pydantic = "2.5.3"
pydantic_settings = "2.1.0"
python-dateutil = "2.8.2"
requests = "2.31.0"
rpds-py = "0.13.2"
scipy = "1.9.3"
pydantic-extra-types = "2.4.1"
strictly-typed-pandas = "0.1.24"
uvicorn = "0.25.0"
# on if used only:
# clarabel = "0.6.0"
# PySCIPOpt = "4.3.0"
# cylp = "0.92.2"  # have problems installing
# ortools="9.4.1874" # have problems installing

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blackbox = 'blackbox.main:start'
mantis-blackbox = 'blackbox.main:main'
dzmitry_solver = 'simulation.routers.test_dzmitry:simulate'
