[package]
edition = "2021"
name = "cvm-runtime-exchange"
version = "0.1.0"

[dependencies]
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cvm = { workspace = true, default-features = false }
astroport = { workspace = true, default-features = false }
prost = { workspace = true, default-features = false}
serde = { workspace = true, default-features = false}
ibc-apps-more = { workspace = true, default-features = false}
schemars ={ workspace = true, default-features = false, optional = true}
thiserror = { workspace = true, default-features = false}
[features]
default = [
    "std",
    "ibc-apps-more/std",
    ]
cosmwasm = [
    "cvm/cosmwasm",
 ]
json-schema = [
    "cvm/json-schema",
    "ibc-apps-more/json-schema",
    "dep:schemars",
]
cosmos = []
std = [
    "cvm/std",
]


