[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "cvm-runtime"
description = "CVM runner on various chains"
version = "0.1.0"

[dependencies]
bech32 = { workspace = true, features = ["strict"] }
cosmwasm-schema = { workspace = true, optional = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cw-storage-plus = { workspace = true, optional = true }
cw20 = { workspace = true, optional = true }
derive_more.workspace = true
hex = { workspace = true, features = ["alloc", "serde"] }
ibc-apps = { workspace = true, features = ["serde", "parity-scale-codec"] }
ibc-core = { workspace = true, features = ["serde", "parity-scale-codec"] }
num = { workspace = true }
parity-scale-codec = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
scale-info = { workspace = true, features = ["derive"] }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["alloc", "derive"] }
serde-json-wasm = { workspace = true, default-features = false }
sha2 = { workspace = true }
strum.workspace = true
thiserror = { workspace = true }
ibc-proto = { workspace = true, default-features = false, features = [
  "serde",
  "parity-scale-codec",
] }
serde-cw-value = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false, optional = true }
primitive-types = { workspace = true, features = [
  "serde_no_std",
], default-features = false }

ibc-apps-more = { workspace = true, default-features = false }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = ["std"]
xcm = ["dep:xcm"]
cosmos = []
cosmwasm = ["cw-storage-plus", "cw20", "ibc-apps-more/cosmwasm"]
substrate = ["xcm"]
json-schema = [
  "serde-cw-value/schema",
  "ibc-apps-more/json-schema",
  "dep:cosmwasm-schema",
  "dep:schemars",
  "ibc-apps/schema",
  "ibc-core/schema",
  "primitive-types/json-schema",
  "serde-cw-value/schema",
]

std = [
  "ibc-proto/std",
  "serde-cw-value/std",
  "serde-json-wasm/std",
  "ibc-apps/schema",
  "ibc-core/schema",
  "num/std",
  "thiserror/std",
]
