[package]
edition = "2021"
name = "cvm"
version = "0.1.0"
description = "Core data types to be shared with any environment on chain and offchain"

[dependencies]
cosmwasm-std = { workspace = true, features = ["ibc3"] }

[features]
default = ["std"]
cosmwasm = []
json-schema = [
]
cosmos = []
std = [
]
