[package]
edition = "2021"
name = "cvm"
version = "0.1.0"
description = "Core data types to be shared with any environment on chain and offchain"

[dependencies]

cosmwasm-schema = { workspace = true, optional = true }
cosmwasm-std = { workspace = true, no-default-features = true, optional = true}
cw-storage-plus = { workspace = true, optional = true}

parity-scale-codec = { workspace = true, optional = true }
prost = { workspace = true, features = ["prost-derive"] }
scale-info = { workspace = true, features = ["derive"], optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["alloc", "derive"] }
num = { workspace = true, default-features = false}
hex ={ workspace = true, default-features = false, features = ["serde"]}
bech32 = { workspace = true, default-features = false}
derive_more = { workspace = true, default-features = false}

[dev-dependencies]
serde-json-wasm = { workspace = true, default-features = false }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = ["std"]
cw-storage-plus = []
parity-scale-codec = [
  "dep:parity-scale-codec",
  "dep:scale-info",
]
cosmos = []
cosmwasm = ["dep:cosmwasm-std", "dep:cw-storage-plus",]
json-schema = [
  "dep:cosmwasm-schema",
  "dep:schemars",
]

std = [
  "num/std",
]