[tool.poetry]
name = "mantis-blackbox"
version = "0.0.1"
description = "Python server which solves problems from provided input and additional data obtained from chains/indexers and outputs single route solution."
authors = []
# packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.11"
ecdsa = "*"
bech32 = "*"
requests = "*"
protobuf = ">=4.21.6,<5.0dev"
grpcio = "==1.53.2"
jsonschema = ">=3.2.0,<5"
python-dateutil = "*"
pycryptodome = "^3.18.0"
googleapis-common-protos = "*"
simulation = { path = "../simulation/", develop = false }

[tool.poetry.dev-dependencies]
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blackbox = 'uvicorn blackbox.main:app --reload --log-level trace --host "0.0.0.0"'