[package]
name = "mantis-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mantis"

[dependencies]
blackbox_rs = { path = "./../blackbox_rs" }
bip32 = { workspace = true, default-features = false, features = [
    "alloc",
    "secp256k1",
    "mnemonic",
    "bip39",
] }
bip39 = {version = "2.0.0", features = ["std"]}
clap = { workspace = true, features = ["derive", "std"] }
cosmos-sdk-proto = { workspace = true, features = ["grpc-transport"] }
cosmrs = { workspace = true, features = []}
cosmwasm-std = { workspace = true, features = []}
cw-mantis-order = { workspace = true, features = [
    "json-schema",
    "std",
] }
log = { workspace = true }
derive_more = { workspace = true, features = [] }
itertools = { workspace = true, features = []}
num-traits = { workspace = true, features = ["std"]}
prost-types = { workspace = true }
rand = { workspace = true, default-features = false }
rand_distr = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde-json-wasm = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tuples = { workspace = true }
cvm-runtime = { workspace = true, features = ["std"] }
ndarray ={ workspace = true, features = ["std", "serde"]}
good_lp = {workspace = true, features = ["coin_cbc", "singlethread-cbc"]}
fraction = {workspace = true, features = ["default"]}
env_logger = {workspace = true}

[dev-dependencies]
rustfmt-wrapper = "0.2.1"