[package]
name = "mantis-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mantis"

[dependencies]
blackbox_rs = { path = "./../blackbox_rs" }
bip32 = { workspace = true, default-features = false, features = [
    "alloc",
    "secp256k1",
    "mnemonic",
    "bip39",
] }
bip39 = {version = "2.0.0", features = ["std"]}
clap = { workspace = true, features = ["derive", "std"] }
cosmos-sdk-proto = { workspace = true, features = ["grpc-transport", "cosmwasm", "grpc"] }
cosmrs = { workspace = true, features = []}
cosmwasm-std = { workspace = true, features = []}
cw-mantis-order = { workspace = true, features = [
    "json-schema",
    "std",
] }

displaydoc = { workspace = true }
cw-cvm-outpost = { workspace = true, features = ["std"] }
cw-cvm-executor = { workspace = true, features = ["std"] }

mantis-cw = { workspace = true, default-features = false }
log = { workspace = true }
derive_more = { workspace = true, features = [] }
itertools = { workspace = true, features = []}
num-traits = { workspace = true, features = ["std"]}
prost-types = { workspace = true }
rand = { workspace = true, default-features = false }
rand_distr = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde-json-wasm = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tuples = { workspace = true }
cvm-runtime = { workspace = true, features = ["std"] }
cvm-route ={ workspace = true}
ndarray ={ workspace = true, features = ["std", "serde"]}
env_logger = {workspace = true}
petgraph = {workspace = true}
num-rational = {workspace = true, features = ["cosmwasm", "serde", "json-schema"], default-features = false}
sha2 = {workspace = true}

bounded-collections = {workspace = true, default-features = false, features = ["std"]}

[dev-dependencies]
cw-multi-test = { workspace = true }
cw-orch = { workspace = true}
rustfmt-wrapper = "0.2.1"
serde_json = { workspace = true }