[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["John Doe"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
cvxpy = "^1.4.1"
pydantic = "^2.5.3"
strictly-typed-pandas = "^0.1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
