[package]
description = "CVM Executor contract"
edition = "2021"
name = "cw-xc-executor"
repository = "https://github.com/ComposableFi/cvm"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
json-schema = ["ibc-apps-more/json-schema", "cvm-runtime/json-schema"]
std = ["cvm-runtime/std", "dep:cosmwasm-schema", "ibc-apps-more/std"]
default = ["std"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true, optional = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
num = { workspace = true }
hex = { workspace = true, default-features = false, features = ["alloc"] }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
serde-cw-value = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
cvm-runtime = { path = "../../../crates/cvm-runtime", features = [
  "cosmwasm",
], default-features = false }
ibc-apps-more= { workspace = true, default-features = false, features = ["cosmwasm"] }