[package]
description = "CVM Executor contract"
edition = "2021"
name = "cw-cvm-executor"
repository = "https://github.com/ComposableFi/cvm"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
json-schema = [
  "ibc-apps-more/json-schema", 
  "cvm-runtime/json-schema",
  "cvm-runtime-exchange/json-schema",
  ]
std = [
  "cvm-runtime/std",
  "dep:cosmwasm-schema",
  "ibc-apps-more/std",
  "thiserror/std",
  "cvm-runtime-exchange/std",
]
cosmos = [
  "cvm-runtime/cosmos",
  "cvm-runtime-exchange/cosmos",
]

default = ["std", "cosmos"]

[dependencies]
cvm-runtime-exchange ={ workspace = true, default-features = false }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true, optional = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
num = { workspace = true }
hex = { workspace = true, default-features = false, features = ["alloc"] }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
serde-cw-value = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
cvm-runtime = { path = "../../../crates/cvm-runtime", features = [
  "cosmwasm",
  "cosmos",
], default-features = false }
ibc-apps-more = { workspace = true, default-features = false, features = [
  "cosmwasm",
] }
osmosis-std = { workspace = true, default-features = false }

astroport = { workspace = true, default-features = false }
